--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -103,7 +103,7 @@ a:hover{
 
 /* DIV CLASS - INFO  */
 
-h2{ 
+.h2index{ 
     font-size: 60px;
     border-bottom: 1px solid black;
     color: #20346c;
@@ -406,3 +406,16 @@ footer img{
     text-align: center;
 }
 
+.BeerSec2{ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sec2quote{ 
+
+    color: #20346c;
+    font-size: 60px;
+    text-align: center;
+
+}
