got the layout for product how i would like

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -430,8 +430,11 @@ footer img{
     align-items: center;
 }
 
+
+
 .list1{ 
+
     height: 60vh; 
-    padding-bottom: 3em;
+    padding: 3em 6em;
 
 }
