--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -416,6 +416,8 @@ footer{
 
 
 
+
+
 footer h3{
     
    display: inline-block;
@@ -530,7 +532,7 @@ footer li {
 }
 
 .cards{ 
-    height: 300px; 
+    height: 260px; 
     width: 350px; 
     background-color: #20346c;
     color: #e8e9eb;
@@ -558,7 +560,7 @@ h4{
     font-size: 40px;
     text-decoration: none;
    padding: 1px 10px;
-   margin: 30px 143px;
+   margin: 30px 150px;
    margin-bottom: 50px;
    border-radius: 30px;
 
@@ -571,5 +573,29 @@ h4{
     text-decoration: none;
     background-color: #e8e9e8;
     filter: drop-shadow(30px 10px 10px #20346c);
+   
+}
+
+.abv{ 
+    color: #e8e9e8;
+    filter: drop-shadow(5px 5px 5px #e8e9e8);
+}
+
+
+
+.price{ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.beerprice{ 
+   
+    text-transform: uppercase;
+    color: #20346c;
+    font-size: 18px;
+   margin: 0px 160px; 
+    
    
 }
